# agentconfig

./: README.md  agentconfig.py  pyproject.toml  test_agentconfig.py
.github/workflows/: ci.yml  publish.yml
examples/malicious-project/: mcp.json
examples/safe-project/: .cursorrules
