[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentconfig"
version = "1.0.0"
description = "AI Agent Configuration Security Auditor — scan .cursorrules, CLAUDE.md, MCP configs for prompt injection and dangerous patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Kris Kimmerle", email = "kris@kriskimmerle.com"},
]
keywords = ["ai-agent", "security", "cursorrules", "mcp", "prompt-injection", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/agentconfig"
Repository = "https://github.com/kriskimmerle/agentconfig"

[project.scripts]
agentconfig = "agentconfig:main"
